--- a/mvc-netcore-minimal/.vscode/tasks.json
+++ b/mvc-netcore-minimal/.vscode/tasks.json
@@ -11,6 +11,14 @@
             ],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
+        },
+        {
+            "taskName": "watch",
+            "args": [
+                "run"
+            ],
+            "isBuildCommand": false,
+            "problemMatcher": "$msCompile"
         }
     ]
 }
