--- a/mvc-netcore-minimal/.vscode/launch.json
+++ b/mvc-netcore-minimal/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}\\bin\\Debug\\netcoreapp1.0\\Legimi.Server.Web.GlobalSite.dll",
+            "program": "${workspaceRoot}\\bin\\Debug\\netcoreapp1.0\\mvc-netcore-minimal.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
